fix: changed margin-top in homepage. Title was displaying too low

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,7 +54,7 @@ footer {
     text-align: left;
   }
   .hello{
-    margin-top: 50%;
+    margin-top: 20%;
   }
 
   .title-text,
